--- a/BTL_QlBi_a/BTL_QlBi_a.csproj
+++ b/BTL_QlBi_a/BTL_QlBi_a.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\css\**" />
+    <Content Remove="wwwroot\css\**" />
+    <EmbeddedResource Remove="wwwroot\css\**" />
+    <None Remove="wwwroot\css\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.20">
       <PrivateAssets>all</PrivateAssets>
@@ -24,7 +31,6 @@
     <Folder Include="resources\" />
     <Folder Include="wwwroot\asset\css\" />
     <Folder Include="wwwroot\asset\js\" />
-    <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
 </Project>
