--- a/BTL_QlBi_a/BTL_QlBi_a.csproj
+++ b/BTL_QlBi_a/BTL_QlBi_a.csproj
@@ -20,9 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
     <Folder Include="resources\" />
     <Folder Include="wwwroot\asset\js\" />
+	  <Folder Include="wwwroot\asset\css\" />
     <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
