--- a/BTL_QlBi_a/BTL_QlBi_a.csproj
+++ b/BTL_QlBi_a/BTL_QlBi_a.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="resources\" />
 	  <Folder Include="wwwroot\asset\css\" />
     <Folder Include="wwwroot\css\" />
