--- a/BTL_QlBi_a/BTL_QlBi_a.csproj
+++ b/BTL_QlBi_a/BTL_QlBi_a.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <Folder Include="resources\" />
-	  <Folder Include="wwwroot\asset\css\" />
+    <Folder Include="wwwroot\asset\img\tables\" />
     <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
