--- a/BTL_QlBi_a/BTL_QlBi_a.csproj
+++ b/BTL_QlBi_a/BTL_QlBi_a.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Home\Partials\NhanVien\_AddEmployeeForm.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.20">
       <PrivateAssets>all</PrivateAssets>
@@ -27,13 +31,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Users\" />
     <Folder Include="Migrations\" />
     <Folder Include="resources\" />
-    <Folder Include="wwwroot\asset\css\" />
-    <Folder Include="wwwroot\asset\js\" />
+    <Folder Include="Views\Users\" />
     <Folder Include="wwwroot\asset\img\tables\" />
     <Folder Include="wwwroot\asset\js\qlHoaDon\" />
     <Folder Include="wwwroot\css\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Home\Partials\NhanVien\_AddEmployeeForm.cshtml" />
   </ItemGroup>
 
 </Project>
