Them hieu ung loading

--- a/BTL_QlBi_a/BTL_QlBi_a.csproj
+++ b/BTL_QlBi_a/BTL_QlBi_a.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <Folder Include="resources\" />
     <Folder Include="wwwroot\asset\img\tables\" />
+    <Folder Include="wwwroot\asset_user\" />
     <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
